--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,7 +6,7 @@ on:
     - cron: '6 6 * * *'
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-20.04
     steps:
 
@@ -19,11 +19,7 @@ jobs:
           go-version: '1.20'
 
       - name: Go mod tidy
-        run: |
-          set -e
-          go mod tidy
+        run: go mod tidy
 
       - name: Go run tests
-        run: |
-          set -e
-          go test -cover ./...
+        run: go test -cover ./...
